Recitacion Theory Project/Version2/myanalyser.output
Terminals unused in grammar

    COMP_VAR
    KW_COMP
    KW_ENDCOMP
    KW_OF
    ASSIGN_EQ


Grammar

    0 $accept: program $end

    1 program: KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
    2        | start_var_decl_list KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
    3        | start_const_decl_list KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
    4        | func_decl_list KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
    5        | start_var_decl_list start_const_decl_list KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
    6        | start_var_decl_list func_decl_list KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
    7        | start_const_decl_list func_decl_list KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
    8        | start_const_decl_list start_var_decl_list KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
    9        | start_var_decl_list start_const_decl_list func_decl_list KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
   10        | start_var_decl_list func_decl_list start_const_decl_list KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
   11        | start_const_decl_list start_var_decl_list func_decl_list KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
   12        | start_const_decl_list func_decl_list start_var_decl_list KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
   13        | func_decl_list start_const_decl_list start_var_decl_list KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
   14        | func_decl_list start_var_decl_list start_const_decl_list KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'

   15 start_var_decl_list: start_var_decl_list var_decl
   16                    | var_decl

   17 var_decl: var_decl_list ':' type_spec ';'
   18         | array_compact_integer

   19 var_decl_list: var_decl_list ',' decl_list_item_id
   20              | decl_list_item_id

   21 array_compact_integer: IDENTIFIER SIMPLE_ARRAY '[' expr KW_FOR expr ':' INTEGER ']' ':' type_spec ';'

   22 start_const_decl_list: start_const_decl_list const_decl
   23                      | const_decl

   24 const_decl: KW_CONST const_decl_list_item ':' type_spec ';'

   25 const_decl_list_item: decl_list_item_id '=' expr
   26                     | decl_list_item_id '=' STRING

   27 func_decl_list: func_decl_list func_decl
   28               | func_decl

   29 func_decl: KW_DEF IDENTIFIER '(' func_var_decl_list ')' RETURN_ID type_spec ':' body KW_ENDDEF ';'
   30          | KW_DEF IDENTIFIER '(' ')' RETURN_ID type_spec ':' body KW_ENDDEF ';'

   31 func_var_decl_list: func_var_decl_list ',' func_var_decl
   32                   | func_var_decl

   33 func_var_decl: decl_list_item_id ':' type_spec

   34 body: decl_list command_list
   35     | command_list

   36 decl_list: decl_list decl
   37          | decl

   38 decl: KW_CONST var_decl ':' type_spec ';'
   39     | var_decl ':' type_spec ';'

   40 decl_list_item_id: IDENTIFIER
   41                  | IDENTIFIER '[' INTEGER ']'
   42                  | IDENTIFIER '[' ']'

   43 command_list: command_list command
   44             | command

   45 command: IDENTIFIER '=' expr ';'
   46        | IDENTIFIER '(' func_call ')' ';'
   47        | IDENTIFIER '(' ')' ';'
   48        | IDENTIFIER '(' STRING ')' ';'
   49        | KW_BREAK ';'
   50        | KW_CONTINUE ';'
   51        | KW_RETURN ';'
   52        | KW_RETURN expr ';'
   53        | KW_IF '(' expr ')' ':' command_list KW_ENDIF ';'
   54        | KW_IF '(' expr ')' ':' command_list KW_ELSE ':' command_list KW_ENDIF ';'
   55        | KW_WHILE '(' expr ')' ':' command_list KW_ENDWHILE ';'
   56        | KW_FOR IDENTIFIER KW_IN '[' expr ':' expr ':' expr ']' ':' command_list KW_ENDFOR ';'
   57        | KW_FOR IDENTIFIER KW_IN '[' expr ':' expr ']' ':' command_list KW_ENDFOR ';'
   58        | var_decl
   59        | const_decl

   60 expr: INTEGER
   61     | SCALAR
   62     | KW_TRUE
   63     | KW_FALSE
   64     | IDENTIFIER
   65     | IDENTIFIER '[' expr ']'
   66     | IDENTIFIER '(' func_call ')'
   67     | IDENTIFIER '(' ')'
   68     | '-' expr
   69     | '(' expr ')'
   70     | expr '+' expr
   71     | expr '-' expr
   72     | expr '*' expr
   73     | expr '/' expr
   74     | expr '%' expr
   75     | expr ASSIGN_PLUSEQ expr
   76     | expr ASSIGN_MINUSEQ expr
   77     | expr ASSIGN_MULEQ expr
   78     | expr ASSIGN_DIVEQ expr
   79     | expr ASSIGN_MODEQ expr
   80     | expr POW expr
   81     | OP_NOT expr
   82     | expr OP_AND expr
   83     | expr OP_OR expr
   84     | expr NE expr
   85     | expr EQUALS expr
   86     | expr '<' expr
   87     | expr LE expr
   88     | expr '>' expr
   89     | expr GE expr

   90 type_spec: KW_INTEGER
   91          | KW_SCALAR
   92          | KW_STR
   93          | KW_BOOLEAN

   94 func_call: func_call ',' expr
   95          | expr


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 74
    '(' (40) 1 2 3 4 5 6 7 8 9 10 11 12 13 14 29 30 46 47 48 53 54 55 66 67 69
    ')' (41) 1 2 3 4 5 6 7 8 9 10 11 12 13 14 29 30 46 47 48 53 54 55 66 67 69
    '*' (42) 72
    '+' (43) 70
    ',' (44) 19 31 94
    '-' (45) 68 71
    '/' (47) 73
    ':' (58) 1 2 3 4 5 6 7 8 9 10 11 12 13 14 17 21 24 29 30 33 38 39 53 54 55 56 57
    ';' (59) 1 2 3 4 5 6 7 8 9 10 11 12 13 14 17 21 24 29 30 38 39 45 46 47 48 49 50 51 52 53 54 55 56 57
    '<' (60) 86
    '=' (61) 25 26 45
    '>' (62) 88
    '[' (91) 21 41 42 56 57 65
    ']' (93) 21 41 42 56 57 65
    error (256)
    IDENTIFIER <str> (258) 21 29 30 40 41 42 45 46 47 48 56 57 64 65 66 67
    INTEGER <str> (259) 21 41 60
    SCALAR <str> (260) 61
    STRING <str> (261) 26 48
    COMP_VAR <str> (262)
    KW_IF (263) 53 54
    KW_DEF (264) 1 2 3 4 5 6 7 8 9 10 11 12 13 14 29 30
    KW_INTEGER (265) 90
    KW_ELSE (266) 54
    KW_ENDIF (267) 53 54
    KW_SCALAR (268) 91
    KW_STR (269) 92
    KW_BOOLEAN (270) 93
    KW_TRUE (271) 62
    KW_FALSE (272) 63
    KW_CONST (273) 24 38
    KW_FOR (274) 21 56 57
    KW_IN (275) 56 57
    KW_ENDFOR (276) 56 57
    KW_WHILE (277) 55
    KW_ENDWHILE (278) 55
    KW_BREAK (279) 49
    KW_CONTINUE (280) 50
    KW_ENDDEF (281) 1 2 3 4 5 6 7 8 9 10 11 12 13 14 29 30
    KW_RETURN (282) 51 52
    KW_COMP (283)
    KW_ENDCOMP (284)
    KW_OF (285)
    POW (286) 80
    EQUALS (287) 85
    NE (288) 84
    LE (289) 87
    GE (290) 89
    OP_AND (291) 82
    OP_OR (292) 83
    OP_NOT (293) 81
    ASSIGN_EQ (294)
    ASSIGN_PLUSEQ (295) 75
    ASSIGN_MINUSEQ (296) 76
    ASSIGN_MULEQ (297) 77
    ASSIGN_DIVEQ (298) 78
    ASSIGN_MODEQ (299) 79
    KW_MAIN (300) 1 2 3 4 5 6 7 8 9 10 11 12 13 14
    SIMPLE_ARRAY (301) 21
    RETURN_ID (302) 29 30


Nonterminals, with rules where they appear

    $accept (63)
        on left: 0
    program (64)
        on left: 1 2 3 4 5 6 7 8 9 10 11 12 13 14
        on right: 0
    start_var_decl_list <str> (65)
        on left: 15 16
        on right: 2 5 6 8 9 10 11 12 13 14 15
    var_decl <str> (66)
        on left: 17 18
        on right: 15 16 38 39 58
    var_decl_list <str> (67)
        on left: 19 20
        on right: 17 19
    array_compact_integer <str> (68)
        on left: 21
        on right: 18
    start_const_decl_list <str> (69)
        on left: 22 23
        on right: 3 5 7 8 9 10 11 12 13 14 22
    const_decl <str> (70)
        on left: 24
        on right: 22 23 59
    const_decl_list_item <str> (71)
        on left: 25 26
        on right: 24
    func_decl_list <str> (72)
        on left: 27 28
        on right: 4 6 7 9 10 11 12 13 14 27
    func_decl <str> (73)
        on left: 29 30
        on right: 27 28
    func_var_decl_list <str> (74)
        on left: 31 32
        on right: 29 31
    func_var_decl <str> (75)
        on left: 33
        on right: 31 32
    body <str> (76)
        on left: 34 35
        on right: 1 2 3 4 5 6 7 8 9 10 11 12 13 14 29 30
    decl_list <str> (77)
        on left: 36 37
        on right: 34 36
    decl <str> (78)
        on left: 38 39
        on right: 36 37
    decl_list_item_id <str> (79)
        on left: 40 41 42
        on right: 19 20 25 26 33
    command_list <str> (80)
        on left: 43 44
        on right: 34 35 43 53 54 55 56 57
    command <str> (81)
        on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
        on right: 43 44
    expr <str> (82)
        on left: 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89
        on right: 21 25 45 52 53 54 55 56 57 65 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 94 95
    type_spec <str> (83)
        on left: 90 91 92 93
        on right: 17 21 24 29 30 33 38 39
    func_call <str> (84)
        on left: 94 95
        on right: 46 66 94


State 0

    0 $accept: • program $end
    1 program: • KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
    2        | • start_var_decl_list KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
    3        | • start_const_decl_list KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
    4        | • func_decl_list KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
    5        | • start_var_decl_list start_const_decl_list KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
    6        | • start_var_decl_list func_decl_list KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
    7        | • start_const_decl_list func_decl_list KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
    8        | • start_const_decl_list start_var_decl_list KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
    9        | • start_var_decl_list start_const_decl_list func_decl_list KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
   10        | • start_var_decl_list func_decl_list start_const_decl_list KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
   11        | • start_const_decl_list start_var_decl_list func_decl_list KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
   12        | • start_const_decl_list func_decl_list start_var_decl_list KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
   13        | • func_decl_list start_const_decl_list start_var_decl_list KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
   14        | • func_decl_list start_var_decl_list start_const_decl_list KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
   15 start_var_decl_list: • start_var_decl_list var_decl
   16                    | • var_decl
   17 var_decl: • var_decl_list ':' type_spec ';'
   18         | • array_compact_integer
   19 var_decl_list: • var_decl_list ',' decl_list_item_id
   20              | • decl_list_item_id
   21 array_compact_integer: • IDENTIFIER SIMPLE_ARRAY '[' expr KW_FOR expr ':' INTEGER ']' ':' type_spec ';'
   22 start_const_decl_list: • start_const_decl_list const_decl
   23                      | • const_decl
   24 const_decl: • KW_CONST const_decl_list_item ':' type_spec ';'
   27 func_decl_list: • func_decl_list func_decl
   28               | • func_decl
   29 func_decl: • KW_DEF IDENTIFIER '(' func_var_decl_list ')' RETURN_ID type_spec ':' body KW_ENDDEF ';'
   30          | • KW_DEF IDENTIFIER '(' ')' RETURN_ID type_spec ':' body KW_ENDDEF ';'
   40 decl_list_item_id: • IDENTIFIER
   41                  | • IDENTIFIER '[' INTEGER ']'
   42                  | • IDENTIFIER '[' ']'

    IDENTIFIER  shift, and go to state 1
    KW_DEF      shift, and go to state 2
    KW_CONST    shift, and go to state 3

    program                go to state 4
    start_var_decl_list    go to state 5
    var_decl               go to state 6
    var_decl_list          go to state 7
    array_compact_integer  go to state 8
    start_const_decl_list  go to state 9
    const_decl             go to state 10
    func_decl_list         go to state 11
    func_decl              go to state 12
    decl_list_item_id      go to state 13


State 1

   21 array_compact_integer: IDENTIFIER • SIMPLE_ARRAY '[' expr KW_FOR expr ':' INTEGER ']' ':' type_spec ';'
   40 decl_list_item_id: IDENTIFIER •  [':', ',', '=']
   41                  | IDENTIFIER • '[' INTEGER ']'
   42                  | IDENTIFIER • '[' ']'

    SIMPLE_ARRAY  shift, and go to state 14
    '['           shift, and go to state 15

    $default  reduce using rule 40 (decl_list_item_id)


State 2

    1 program: KW_DEF • KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
   29 func_decl: KW_DEF • IDENTIFIER '(' func_var_decl_list ')' RETURN_ID type_spec ':' body KW_ENDDEF ';'
   30          | KW_DEF • IDENTIFIER '(' ')' RETURN_ID type_spec ':' body KW_ENDDEF ';'

    IDENTIFIER  shift, and go to state 16
    KW_MAIN     shift, and go to state 17


State 3

   24 const_decl: KW_CONST • const_decl_list_item ':' type_spec ';'
   25 const_decl_list_item: • decl_list_item_id '=' expr
   26                     | • decl_list_item_id '=' STRING
   40 decl_list_item_id: • IDENTIFIER
   41                  | • IDENTIFIER '[' INTEGER ']'
   42                  | • IDENTIFIER '[' ']'

    IDENTIFIER  shift, and go to state 18

    const_decl_list_item  go to state 19
    decl_list_item_id     go to state 20


State 4

    0 $accept: program • $end

    $end  shift, and go to state 21


State 5

    2 program: start_var_decl_list • KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
    5        | start_var_decl_list • start_const_decl_list KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
    6        | start_var_decl_list • func_decl_list KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
    9        | start_var_decl_list • start_const_decl_list func_decl_list KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
   10        | start_var_decl_list • func_decl_list start_const_decl_list KW_DEF KW_MAIN '(' ')' ':' body KW_ENDDEF ';'
   15 start_var_decl_list: start_var_decl_list • var_decl
   17 var_decl: • var_decl_list ':' type_spec ';'
   18         | • array_compact_integer
   19 var_decl_list: • var_decl_list ',' decl_list_item_id
   20              | • decl_list_item_id
   21 array_compact_integer: • IDENTIFIER SIMPLE_ARRAY '[' expr KW_FOR expr ':' INTEGER ']' ':' type_spec ';'
   22 start_const_decl_list: • start_const_decl_list const_decl
   23                      | • const_decl
   24 const_decl: • KW_CONST const_decl_list_item ':' type_spec ';'
   27 func_decl_list: • func_decl_list func_decl
   28               | • func_decl
   29 func_decl: • KW_DEF IDENTIFIER '(' func_var_decl_list ')' RETURN_ID type_spec ':' body KW_ENDDEF ';'
   30          | • KW_DEF IDENTIFIER '(' ')' RETURN_ID type_spec ':' body KW_ENDDEF ';'
   40 decl_list_item_id: • IDENTIFIER
   41                  | • IDENTIFIER '[' INTEGER ']'
   42                  | • IDENTIFIER '[' ']'

    IDENTIFIER  shift, and go to state 1
    KW_DEF      shift, and go to state 22
    KW_CONST    shift, and go to state 3

    var_decl               go to state 23
    var_decl_list          go to state 7
    array_compact_integer  go to state 8
    start_const_decl_list  go to state 24
    const_decl             go to state 10
    func_decl_list         go to state 25
    func_decl              go to state 12
    decl_list_item_id      go to state 13


State 6

   16 start_var_decl_list: var_decl •

    $default  reduce using rule 16 (start_var_decl_list)


State 7

   17 var_decl: var_decl_list • ':' type_spec ';'
   19 var_decl_list: var_decl_list • ',' decl_list_item_id

    ':'  shift, and go to state 26
    ','  shift, and go to state 27


State 8

   18 var_decl: array_compact_integer •

    $default  reduce using rule 18 (var_decl)


State 9
